<resources>
    <string name="app_name">Storage</string>

    <!-- CatalogActivity Overflow Menu Items -->
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_entries">Delete All Entries</string>

    <!-- EditorActivity Overflow Menu Items -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_email">Email</string>

    <!-- EditorActivity Labels-->
    <string name="inventory_name">Name</string>
    <string name="inventory_quantity">Quantity</string>
    <string name="inventory_price">Price</string>
    <string name="inventory_img_dir">Image Directory</string>
    <string name="inventory_sellable">Sellable</string>

    <!-- EditorActivity Hints-->
    <string name="inventory_hint_name">Name</string>
    <string name="inventory_hint_quantity">Quantity</string>
    <string name="inventory_hint_price">Price</string>
    <string name="inventory_hint_img_dir">Image Directory</string>
    <string name="inventory_hint_sellable">Sellable</string>

    <!-- Boolean True or False-->
    <string name="boolean_true">True</string>
    <string name="boolean_false">False</string>

    <string name="editor_activity_title_new_item">Add an Item</string>
    <string name="editor_activity_title_edit_item">Edit Inventory</string>

    <string name="editor_update_inventory_successful">Inventory updated</string>
    <string name="editor_update_inventory_failed">Error with updating inventory</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_inventory_successful">Inventory deleted</string>
    <string name="editor_delete_inventory_failed">Error with deleting inventory</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

</resources>
